src/test/deca/syntax/invalid/without_class/wrong_char_decimal.deca
// Description:
//    Error in use of decimal numbers : ',' instead of '.'
//
// Result:
//    Syntax Error
//    line 9

{    
    float x = 1,2;
    return x;  
}